<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBooking"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/notif_booking"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPromo"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/notif_promo"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchHealth"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/notif_health"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>